@@ -2,6 +2,7 @@
 - Fixes:
   - tint2conf: executor tooltips are now correctly disabled when text config value is empty (contributed by Justin Jacobs)
   - Battery: support Asus Chromebook Flip C100PA (issue #616)
+  - Panel: do not change struts (available screen size) when shown in autohide mode (issue #619)
 - Enhancements:
   - Desktop files (shortcuts) used in launcher are reloaded on click, in case the file has changed
   - New config option taskbar_hide_if_empty to hide an empty taskbar in multi_desktop mode (contributed by Benoit Averty)
